tests/snapshots/previews_snapshots__create_collection.snap
---
source: tests/previews_snapshots.rs
expression: "CreateCollectionPreview::new(&payload).to_string()"
---
Dry Run: Create Collection
Title: Architecture
Parent: 5
