tests/snapshots/previews_snapshots__create_raindrop.snap
---
source: tests/previews_snapshots.rs
expression: "CreateRaindropPreview::new(&payload).to_string()"
---
Dry Run: Create Raindrop
Link: https://example.com/create
Title: Saved article
Collection: 7
Tags: rust, backend
