tests/snapshots/previews_snapshots__delete_collection.snap
---
source: tests/previews_snapshots.rs
expression: "DeleteCollectionPreview::new(&full_collection()).to_string()"
---
Dry Run: Delete Collection
Target
ID: 12
Title: Reading list
