tests/snapshots/previews_snapshots__delete_tag.snap
---
source: tests/previews_snapshots.rs
expression: "DeleteTagPreview::new(&args).to_string()"
---
Dry Run: Delete Tag
Target
Collection: 7
Tag: deprecated
