tests/snapshots/previews_snapshots__upload_collection_cover.snap
---
source: tests/previews_snapshots.rs
expression: "UploadCollectionCoverPreview::new(&full_collection(), &path).to_string()"
---
Dry Run: Upload Collection Cover
Target
ID: 12
Title: Reading list
Path: fixtures/report.pdf
